examples/test/testpolicy13811.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13811
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key23: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value5
          key48: value25
      podSelector:
        matchLabels:
          key40: value34
          key43: value10
          key32: value20
